[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Personagens/Boss/THETA/Theta_Ship.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Personagens/BOSS/THETA/Tetha_Spikes.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sons/Hit_Hurt.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 56, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 112, 36, 56, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 56, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 112, 144, 56, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 56, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 112, 36, 56, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 56, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 72, 56, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 56, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 112, 180, 56, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 56, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 112, 72, 56, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 56, 36 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "broken",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), null, SubResource( 13 ), null, SubResource( 13 ), null ],
"loop": true,
"name": "damage",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 80, 51 )

[node name="Tetha_Spikes_L" type="Area2D"]
position = Vector2( 84, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.62939e-06, 7.62939e-06 )
scale = Vector2( 3, 3 )
frames = SubResource( 14 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 3 )
shape = SubResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Shot Sound"
[connection signal="area_entered" from="." to="." method="_on_Tetha_Spikes_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
